# turbo

./: .gitignore  Cargo.toml  README.md  backend_api.rs  build.rs  deny.toml  install-bitcoin.sh  install-debian.sh  install-dev-ubuntu.sh  migrations.toml  package.json  rust-toolchain.toml  turbo.code-workspace  turbo.service  vite.config.ts  web-test-runner.config.js
.cargo/: config.toml
.github/workflows/: ci.yml
src/: app.rs  backend.rs  mail.rs  server.rs  wasm.rs  wasm_crypto.rs
src-frontend/: App.svelte  AppLoader.svelte  Button.svelte  EmailListItem.svelte  Span.svelte  StreamSpan.svelte  Tab.svelte  Tab1.svelte  Tab2.svelte  Tab3.svelte  index.html  no-svelte.js
src-frontend/tests/: turbocharger.test.js
src/app/: animal_time_stream.rs  app.rs  auth.rs  bip39.rs  bitcoin.rs  check_for_updates.rs  jackett.rs  mail.rs  rqbit.rs  settings.rs  torrents.rs
src/app/components/: actionbutton.rs  button.rs  mod.rs  resultsbutton.rs  table.rs  textfield.rs
src/backend/: check_for_updates.rs
src/components/: navbar.rs
src/server/: server.rs  smtp.rs
src/wasm/: wasm.rs
