[package]
authors = ["The authors"]
edition = "2021"
exclude = [".github", ".vscode"]
name = "turbo"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "turbocharger_generated"
path = "src/wasm.rs"

[[bin]]
name = "turbo"
path = "src/server.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# dependencies for wasm only
getrandom = {version = "0.2", features = ["js"]}
rand_core = {version = "0.6", features = ["getrandom"]}

[dependencies]
# dependencies that are really only for wasm, but rust-analyzer uses too
mailparse = "0.13"
wasm-bindgen = "=0.2.79"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = ["Storage", "Window"]}

# dependencies for both server and wasm
crypto_box = "0.7.1"
hex = "0.4"
once_cell = "1"
sealed_box = {git = "https://github.com/trevyn/sealed_box", branch = "master"}
tracked = "0.1.1"
turbocharger = {version = "0.3", features = ["full", "debug_expansions"], default-features = false}
turbosql = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
animal-time = "0.1"
async-stream = {version = "0.3", git = "https://github.com/trevyn/async-stream", branch = "try_stream_attribute"}
gflags = "0.3"
log = "0.4"
mailin-embedded = {version = "0.7", features = ["rtls"]}
opener = "0.5"
pretty_env_logger = "0.4"
rcgen = "0.9"
regex = "1"
reqwest = "0.11"
rust-embed = "6"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
turbonet = {git = "https://github.com/trevyn/turbonet", branch = "main"}

[build-dependencies]
time = {version = "0.3", features = ["formatting"]}

[patch.crates-io]
# rusqlite = {git = "https://github.com/rusqlite/rusqlite", branch = "master"}
# turbocharger = {path = "../turbocharger/turbocharger"}
# turbosql = {path = "../turbosql/turbosql"}
tracked = {git = "https://github.com/trevyn/tracked", branch = "main"}
turbocharger = {git = "https://github.com/trevyn/turbocharger", branch = "main"}
# turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}

[profile.dev]
incremental = false # see https://github.com/dtolnay/inventory/issues/24

[profile.release]
lto = true
opt-level = 'z'
