[package]
authors = ["The authors"]
edition = "2021"
exclude = [".github", ".vscode"]
name = "turbo"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "turbocharger_generated"
path = "src/wasm.rs"

[[bin]]
name = "turbo"
path = "src/server.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# overrides for real wasm build
getrandom = {version = "0.2", features = ["js"]} 
wasm-bindgen = "=0.2.80" # Version to be synced with the wasm-bindgen CLI version in CI

[features]
wasm = [
  "turbocharger/wasm",
  "turbocharger/full",
  "bip39",
  "console_error_panic_hook",
  "dioxus",
  "mail-parser",
  "rand_core",
  "tracing-wasm",
  "web-sys",
]
[dependencies]
# dependencies that are really only for wasm, but rust-analyzer uses too
bip39 = {version = "1", optional = true}
console_error_panic_hook = {version = "0.1", optional = true}
dioxus = {version = "0.2", features = ["web"], optional = true}
mail-parser = {version = "0.4", optional = true}
rand_core = {version = "0.6", features = ["getrandom"], optional = true}
tracing-wasm = {version = "0.2", optional = true}
web-sys = {version = "0.3", features = ["Storage", "Window"], optional = true}

# dependencies for both server and wasm
crypto_box = "0.7.1"
hex = "0.4"
once_cell = "1"
sealed_box = {git = "https://github.com/trevyn/sealed_box", branch = "master"}
serde = {version = "1", features = ["derive"]}
turbocharger = {version = "0.3", features = ["axum", "tls", "debug_expansions"], default-features = false}
turbosql = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
animal-time = "0.1"
gflags = "0.3"
log = "0.4"
mailin-embedded = {version = "0.7", features = ["rtls"]}
opener = "0.5"
pretty_env_logger = "0.4"
rcgen = "0.9"
regex = "1"
reqwest = "0.11"
rust-embed = "6"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
turbonet = {git = "https://github.com/trevyn/turbonet", branch = "main"}

[build-dependencies]
time = {version = "0.3", features = ["formatting"]}

[patch.crates-io]
acme-lib = {git = "https://github.com/trevyn/acme-lib", branch = "ureq_v2"}
# dioxus = {git = "https://github.com/DioxusLabs/dioxus", branch = "master"}
# rusqlite = {git = "https://github.com/rusqlite/rusqlite", branch = "master"}
# turbocharger = {path = "../turbocharger/turbocharger"}
# turbosql = {path = "../turbosql/turbosql"}
# tracked = {path = "../tracked/tracked"}
# tracked = {git = "https://github.com/trevyn/tracked", branch = "main"}
async-stream = {git = "https://github.com/tokio-rs/async-stream", branch = "master"}
blst = {git = "https://github.com/supranational/blst", branch = "master"}
turbocharger = {git = "https://github.com/trevyn/turbocharger", branch = "main"}
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}

[profile.dev]
incremental = false # see https://github.com/dtolnay/inventory/issues/24

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
